# wujihandros2

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  README.md  README_CN.md  README_EN.md  build_deb.sh  env.sh
.github/workflows/: ci.yml  notify-docs.yml  release.yml
docs/: API.md  DESIGN.md  ROS2_CLI.md
docs/en/: meta.json  wuji-hand-ros2-user-guide.mdx
docs/zh/: meta.json  wuji-hand-ros2-user-guide.mdx
example/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
example/log/: latest_build
example/src/wujihand_example/: CMakeLists.txt
example/src/wujihand_example/src/: wujihand_example.cpp
tactile_viz/: CMakeLists.txt  README.md  package.xml
tactile_viz/config/: point_positions.yaml
tactile_viz/launch/: filter_demo.launch.py  tactile_viz.launch.py  tactile_viz_foxglove.launch.py
tactile_viz/rviz/: tactile_display.rviz
tactile_viz/scripts/: plot_filter_effect.py
tactile_viz/src/: filter_demo_node.cpp  tactile_stats_node.cpp  tactile_viz_node.cpp
tactile_viz/urdf/: 36_points.urdf  36_points_fixed.urdf
wujihand_bringup/: CMakeLists.txt  package.xml
wujihand_bringup/config/: foxglove_layout.json  wujihand_params.yaml
wujihand_bringup/launch/: common.py  wujihand.launch.py  wujihand_foxglove.launch.py  wujihand_rviz.launch.py
wujihand_bringup/scripts/: wave_demo.py
wujihand_description/: package.xml
wujihand_description/rviz/: robot_display.rviz
wujihand_description/urdf/: left-ros.urdf  wujihand.urdf.xacro
wujihand_driver/: package.xml
wujihand_msgs/: CMakeLists.txt  package.xml
(+125 files in other folders)
